Refactored list creation to use List.of() method.